Fixed styling bugs with the post list on mobile devices

--- a/web/public/less/list.less
+++ b/web/public/less/list.less
@@ -43,9 +43,6 @@
 }
 
 // Extension to the media component
-.media-body {
-    margin-right: 150px;
-}
 .media-meta {
     margin-top: 10px;
     margin-bottom: 5px;
